--- a/configure.in
+++ b/configure.in
@@ -67,6 +67,11 @@ if test "x$png_ok" != "xyes"; then
 	AC_MSG_ERROR([libpng >= 1.2 is needed to compile inkscape])
 fi
 
+AC_CHECK_LIB(gc, GC_malloc, [AC_CHECK_HEADER(gc/gc_cpp.h, gc_ok=yes, gc_ok=no)], gc_ok=no)
+if test "x$gc_ok" != "xyes"; then
+	AC_MSG_ERROR([libgc (the Boehm Conservative Collector), built with C++ support, is needed to compile inkscape])
+fi
+
 AC_PATH_PROG(FREETYPE_CONFIG, freetype-config, no)
 if test "x$FREETYPE_CONFIG" = "xno"; then
 	AC_MSG_ERROR([Cannot find freetype-config])
