--- a/configure.in
+++ b/configure.in
@@ -54,7 +54,7 @@ GETTEXT_PACKAGE="$PACKAGE_NAME"
 AC_SUBST(GETTEXT_PACKAGE)
 AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE",[Translation domain used])
 dnl Add the languages which your application supports here.
-ALL_LINGUAS="am az be ca cs da de el es es_MX et fr ga gl hu it ja nl no ru sk sl sr sr@Latn sv tr uk pl pt_BR pt zh_CN"
+ALL_LINGUAS="am az be ca cs da de el es es_MX et fr ga gl hu it ja nl nn no ru sk sl sr sr@Latn sv tr uk pl pt_BR pt zh_CN"
 AM_GLIB_GNU_GETTEXT
 
 AC_PATH_PROG(PKG_CONFIG, pkg-config, no)
