--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: graphics
 Priority: optional
 Maintainer: Nathan Hurst (njh) <njh@mail.csse.monash.edu.au>
 Standards-Version: 3.5.6
-Build-Depends: debhelper (>= 3.0.30), intltool, automake1.7, gettext, libtool, libart-2.0-dev, libatk1.0-dev, libfreetype6-dev, libglib2.0-dev, libgtk2.0-dev (>= 2.0.6-1), libpango1.0-dev, libpopt-dev, libpng3-dev, libxml2-dev, xlibs-dev, zlib1g-dev, libxft2-dev, libsigc++-1.2-dev
+Build-Depends: debhelper (>= 3.0.30), intltool, automake1.7, gettext, libtool, libart-2.0-dev, libatk1.0-dev, libfreetype6-dev, libglib2.0-dev, libgtk2.0-dev (>= 2.0.6-1), libpango1.0-dev, libpopt-dev, libpng3-dev, libxml2-dev, xlibs-dev, zlib1g-dev, libxft2-dev, libsigc++-2.0-dev, libgc-dev, libgtkmm-2.4-dev
 
 Package: inkscape
 Architecture: any
