fix hyphen to minus for -P flag
(bzr r3563)

--- a/inkscape.1.in
+++ b/inkscape.1.in
@@ -206,7 +206,7 @@ The height of generated bitmap in pixels (overwrites dpi)
 Prefer bitmap (xpm) icons to \s-1SVG\s0 ones
 .IP "\fB\-p\fR \fI\s-1FILENAME\s0\fR, \fB\-\-print\fR=\fI\s-1PRINTER\s0\fR" 8
 .IX Item "-p PRINTER, --print=PRINTER"
-Print document(s) to specified printer using `lpr -P PRINTER'.
+Print document(s) to specified printer using `lpr \-P PRINTER'.
 Alternatively, use `| COMMAND' to specify a different command to pipe to,
 or use `> FILENAME' to write the postscript to a file instead of printing.
 Remember to do appropriate quoting for your shell, e.g.
