--- a/debian/rules
+++ b/debian/rules
@@ -1,60 +1,100 @@
 #!/usr/bin/make -f
+# -*- makefile -*-
+# Sample debian/rules that uses debhelper.
+# GNU copyright 1997 to 1999 by Joey Hess.
 
-tmp:=$(shell pwd)/debian/tmp
+# Uncomment this to turn on verbose mode.
+#export DH_VERBOSE=1
+
+# These are used for cross-compiling and for saving the configure script
+# from having to guess our platform (since we know it already)
+DEB_HOST_GNU_TYPE   ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
+DEB_BUILD_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
+
+
+CXXFLAGS = -g
 
 ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
-CFLAGS += -O0
+  CXXFLAGS += -O0
 else
-CFLAGS += -O2
+  CXXFLAGS += -O2
 endif
 ifeq (,$(findstring nostrip,$(DEB_BUILD_OPTIONS)))
-INSTALL_PROGRAM += -s
+  INSTALL_PROGRAM += -s
 endif
 
 CPUS := $(shell getconf _NPROCESSORS_ONLN)
 ifeq ($(CPUS),)
- PARALLEL :=
+  PARALLEL :=
 else
- PARALLEL := -j$(CPUS)
+  PARALLEL := -j$(CPUS)
 endif
 
-build: build-stamp
-build-stamp:
+builddir/config.status: configure
 	dh_testdir
-	CFLAGS="$(CFLAGS)" ./configure --prefix=/usr --sysconfdir=/etc --with-gtk-prefix=/usr --mandir=$(tmp)/usr/share/man \
-	--with-xft --without-gnome-print --with-inkjar
-	$(MAKE) $(PARALLEL)
-	touch build-stamp
+	mkdir -p builddir
+	cd builddir	\
+	 && CXXFLAGS="$(CXXFLAGS)"	\
+	     ../configure --host=$(DEB_HOST_GNU_TYPE) --build=$(DEB_BUILD_GNU_TYPE)	\
+		--prefix=/usr --mandir=\$${prefix}/share/man --infodir=\$${prefix}/share/info	\
+		--with-xft --without-gnome-print --with-inkjar
+
+build: builddir/config.status
+	dh_testdir
+	cd builddir && $(MAKE) $(PARALLEL)
 
 clean:
 	dh_testdir
-	dh_testroot
-	[ ! -f Makefile ] || $(MAKE) clean
-	rm -f build-stamp 
-	-test -r /usr/share/misc/config.sub && \
-	cp -f /usr/share/misc/config.sub $(CURDIR)/config.sub
-	-test -r /usr/share/misc/config.guess && \
-	cp -f /usr/share/misc/config.guess $(CURDIR)/config.guess
-	rm -f conftest.o po/*.gmo po/messages config.log src/bonobo/Makefile src/display/nr/Makefile
-	rm -f inkscape.spec inkscape.desktop intltool-extract intltool-merge intltool-update GNOME_Sodipodi.oaf
-	rm -f config.status intl/Makefile po/Makefile.in po/POTFILES po/.intltool-merge-cache
+	rm -rf builddir
+ifneq "$(wildcard /usr/share/misc/config.sub)" ""
+	cp -f /usr/share/misc/config.sub config.sub
+endif
+ifneq "$(wildcard /usr/share/misc/config.guess)" ""
+	cp -f /usr/share/misc/config.guess config.guess
+endif
+	rm -f po/.intltool-merge-cache
+	rm -f po/*.gmo po/messages
 	dh_clean 
 
-binary-indep: 
-
-binary-arch: build 
+install: build
 	dh_testdir
 	dh_testroot
-	$(MAKE) install prefix=$(tmp)/usr sysconfdir=$(tmp)/etc
-	find $(tmp)/usr -name "Makefile*" | xargs -r rm -f
-	dh_installdocs README
-	dh_installmenu
+	dh_clean -k
+	dh_installdirs
+	cd builddir && $(MAKE) install DESTDIR=$(CURDIR)/debian/inkscape
+	install -o root -g root -m 644 $(CURDIR)/debian/inkscape.xpm $(CURDIR)/debian/inkscape/usr/share/pixmaps/inkscape.xpm
+	install -o root -g root -m 644 $(CURDIR)/debian/inkscape.applications $(CURDIR)/debian/inkscape/usr/share/application-registry/inkscape.applications
+
+
+# Build architecture-independent files here.
+binary-indep: build install
+# We have nothing to do by default.
+
+# Build architecture-dependent files here.
+binary-arch: build install
+	dh_testdir
+	dh_testroot
 	dh_installchangelogs ChangeLog
-ifeq "$(findstring nostrip,$(DEB_BUILD_OPTIONS))" ""
+	dh_installdocs
+#	dh_installexamples
+#	dh_install
+	dh_installmenu
+#	dh_installdebconf
+#	dh_installlogrotate
+#	dh_installemacsen
+#	dh_installpam
+	dh_installmime
+#	dh_installinit
+#	dh_installcron
+#	dh_installinfo
+#	dh_installman
+	dh_link
 	dh_strip
-endif
-	dh_compress -X.svg
+	dh_compress
 	dh_fixperms
+#	dh_perl
+#	dh_python
+#	dh_makeshlibs
 	dh_installdeb
 	dh_shlibdeps
 	dh_gencontrol
@@ -62,4 +102,5 @@ endif
 	dh_builddeb
 
 binary: binary-indep binary-arch
-.PHONY: build clean binary-indep binary-arch binary 
+
+.PHONY: build clean binary-indep binary-arch binary install
