--- a/src/display/Makefile_insert
+++ b/src/display/Makefile_insert
@@ -59,6 +59,7 @@ display_libspdisplay_a_SOURCES = \
 	display/canvas-grid.h	\
 	display/curve.cpp	\
 	display/curve.h	\
+	display/display-forward.h	\
 	display/gnome-canvas-acetate.cpp	\
 	display/gnome-canvas-acetate.h	\
 	display/guideline.cpp	\
