--- a/src/makefile.msc
+++ b/src/makefile.msc
@@ -17,7 +17,7 @@ sub-one:
 PKG_CFLAGS = \
 	-FImsvc_recommended_pragmas.h \
 	-I$(PRJ_TOP) -I. \
-	$(GLIB_CFLAGS) $(LIBART_CFLAGS) $(LIBXML2_CFLAGS) $(GTK2_CFLAGS) \
+	$(GLIB_CFLAGS) $(LIBXML2_CFLAGS) $(GTK2_CFLAGS) \
 	$(POPT_CFLAGS)
 
 SODIPODI_LIBS = \
@@ -33,7 +33,7 @@ SODIPODI_LIBS = \
 
 PKG_LINK = \
 	$(SODIPODI_LIBS) \
-	$(GLIB_LIBS) $(GTK2_LIBS) $(LIBART_LIBS) $(LIBXML2_LIBS) $(PNG_LIBS) \
+	$(GLIB_LIBS) $(GTK2_LIBS) $(LIBXML2_LIBS) $(PNG_LIBS) \
 	$(INTL_LIBS) \
 	$(POPT_LIBS) \
 	$(GNOME_PRINT_LIBS) \
