--- a/src/libnr/makefile.msc
+++ b/src/libnr/makefile.msc
@@ -7,8 +7,8 @@ PKG_VER = 0.32
 PKG_CFLAGS = \
 	-I.. \
 	-FImsvc_recommended_pragmas.h \
-	$(GLIB_CFLAGS) $(LIBART_CFLAGS)
-	
+	$(GLIB_CFLAGS)
+
 OBJECTS = \
 	nr-values.obj \
 	nr-matrix.obj \
