Adding the first support in for trying to determine which profiles are used with certain functionality, and if that is used by the current document.  Really, right now, there is no code changes to anything that compiles.  But this is the header file that contains the class that I'm plannig to use in the future.
(bzr r3688)

--- a/src/Makefile_insert
+++ b/src/Makefile_insert
@@ -158,6 +158,7 @@ libinkpre_a_SOURCES =	\
 	tools-switch.cpp tools-switch.h\
 	uri.cpp uri.h	\
 	uri-references.cpp uri-references.h	\
+	svg-profile.h \
 	verbs.cpp verbs.h	\
 	version.cpp version.h	\
 	view.cpp view.h	\
