operator/(NR::Point, NR::Matrix), operator/(NR::Matrix, NR::Matrix): new
(bzr r3691)

--- a/src/libnr/Makefile_insert
+++ b/src/libnr/Makefile_insert
@@ -29,6 +29,8 @@ libnr_libnr_a_SOURCES =	\
 	libnr/nr-gradient.h	\
 	libnr/nr-i-coord.h	\
 	libnr/nr-macros.h	\
+	libnr/nr-matrix-div.cpp	\
+	libnr/nr-matrix-div.h	\
 	libnr/nr-matrix-fns.cpp	\
 	libnr/nr-matrix-fns.h	\
 	libnr/nr-matrix-ops.h	\
