Remove some .h files from util/ that don't compile and aren't used.
(bzr r3706)

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -83,16 +83,11 @@ EXTRA_DIST =	\
 	traits/list.h \
 	traits/reference.h \
 	traits/tree-iterator.h \
-	util/flip.h \
-	util/fold.h \
 	util/list.h \
-	util/list-iterator.h \
 	util/map.h \
 	util/parent-axis.h \
-	util/reverse.h \
 	util/sibling-axis.h \
-	util/tuple.h \
-	util/zip.h
+	util/tuple.h
 
 EXTRA_PROGRAMS =	\
 	inkview 	\
