--- a/debian/rules
+++ b/debian/rules
@@ -12,32 +12,27 @@ DEB_HOST_GNU_TYPE   ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
 DEB_BUILD_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
 
 
+CFLAGS = -g
 CXXFLAGS = -g
 
 ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
+  CFLAGS += -O0
   CXXFLAGS += -O0
 else
+  CFLAGS += -O2
   CXXFLAGS += -O2
 endif
 ifeq (,$(findstring nostrip,$(DEB_BUILD_OPTIONS)))
   INSTALL_PROGRAM += -s
 endif
 
-CPUS := $(shell getconf _NPROCESSORS_ONLN)
-ifeq ($(CPUS),)
-  PARALLEL :=
-else
-  PARALLEL := -j$(CPUS)
-endif
-
 builddir/config.status: configure
 	dh_testdir
 	mkdir -p builddir
 	cd builddir	\
-	 && CXXFLAGS="$(CXXFLAGS)"	\
+	 && CFLAGS="$(CFLAGS)" CXXFLAGS="$(CXXFLAGS)"	\
 	     ../configure --host=$(DEB_HOST_GNU_TYPE) --build=$(DEB_BUILD_GNU_TYPE)	\
-		--prefix=/usr --mandir=\$${prefix}/share/man --infodir=\$${prefix}/share/info	\
-		--with-xft --without-gnome-print --with-inkjar
+		--prefix=/usr --mandir=\$${prefix}/share/man --infodir=\$${prefix}/share/info
 
 build: builddir/config.status
 	dh_testdir
