work in progress
(bzr r3729)

--- a/src/xpath/Makefile
+++ b/src/xpath/Makefile
@@ -7,7 +7,7 @@ INC =
 
 LIBS =
 
-OBJ = xpath.tab.o lex.yy.o
+OBJ = xpath.tab.o lex.yy.o dom.o
 
 all: xtest
 
@@ -23,6 +23,11 @@ xpath.tab.o: xpath.tab.cpp xpath.h
 xpath.tab.cpp: xpath.lex xpath.ypp
 	bison -v -d xpath.ypp
 
+.cpp.o:
+	$(CXX) $(CFLAGS) $(INC) -c -o $@ $<
+
+.c.o:
+	$(CC) $(CFLAGS) $(INC) -c -o $@ $<
 
 clean:
 	$(RM) *.o *.a lex.yy.c xpath.tab.cpp xpath.tab.hpp xtest
