--- a/src/Makefile_insert
+++ b/src/Makefile_insert
@@ -146,6 +146,8 @@ libinkpre_a_SOURCES =	\
 	sp-star.cpp sp-star.h	\
 	sp-symbol.cpp sp-symbol.h	\
 	sp-text.cpp sp-text.h	\
+	sp-string.cpp sp-string.h	\
+	sp-tspan.cpp sp-tspan.h	\
 	sp-use.cpp sp-use.h	\
 	sp-use-reference.cpp sp-use-reference.h	\
 	star-context.cpp star-context.h	\
