fred's text refactoring: libnrtype stuff
(bzr r3733)

--- a/src/libnrtype/Makefile_insert
+++ b/src/libnrtype/Makefile_insert
@@ -28,14 +28,23 @@ libnrtype_libnrtype_a_SOURCES =	\
 	libnrtype/RasterFont.h \
 	libnrtype/raster-glyph.h	\
 	libnrtype/raster-position.h	\
-	libnrtype/text_holder.cpp	\
-	libnrtype/text_holder.h	\
-	libnrtype/text_style.cpp	\
-	libnrtype/text_style.h	\
-	libnrtype/FlowUtils.cpp	\
-	libnrtype/FlowUtils.h	\
+	libnrtype/FlowSrcText.cpp	\
+	libnrtype/FlowSrcText.h	\
 	libnrtype/FlowSrc.cpp	\
 	libnrtype/FlowSrc.h	\
+	libnrtype/FlowDest.cpp	\
+	libnrtype/FlowDest.h	\
+	libnrtype/FlowRes.cpp	\
+	libnrtype/FlowResOut.cpp	\
+	libnrtype/FlowRes.h	\
+	libnrtype/FlowBoxes.cpp	\
+	libnrtype/FlowBoxes.h	\
+	libnrtype/FlowStyle.cpp	\
+	libnrtype/FlowStyle.h	\
+	libnrtype/FlowUtils.cpp	\
+	libnrtype/FlowUtils.h	\
+	libnrtype/FlowSols.cpp	\
+	libnrtype/FlowSols.h	\
 	libnrtype/FlowEater.cpp	\
 	libnrtype/FlowEater.h	\
 	libnrtype/FlowDefs.h	\
