take advantage of garbage collection in SPRepr
(bzr r3764)

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -43,6 +43,7 @@ noinst_LIBRARIES =	\
 	extension/internal/libinternal.a	\
 	extension/libextension.a	\
 	helper/libspchelp.a	\
+	util/libinkutil.a \
 	$(inkjar_libs)	\
 	libnr/libnr.a	\
 	libnrtype/libnrtype.a	\
