--- a/src/util/Makefile_insert
+++ b/src/util/Makefile_insert
@@ -1,5 +1,9 @@
 
-traits/all:
+traits/all: util/libinkutil.a
 
 traits/clean:
+	rm -f util/libinkutil.a $(util_libinkutil_a_OBJECTS)
+
+util_libinkutil_a_SOURCES = \
+	util/share-c-string.cpp
 
