--- a/src/xml/Makefile_insert
+++ b/src/xml/Makefile_insert
@@ -25,7 +25,9 @@ xml_libspxml_a_SOURCES =	\
 	xml/repr.cpp	\
 	xml/repr.h	\
 	xml/xml-forward.h \
-	xml/sp-repr-attr.h
+	xml/sp-repr-listener.h \
+	xml/sp-repr-event-vector.h \
+	xml/sp-repr-attr.h 
 
 xml_repr_action_test_SOURCES = xml/repr-action-test.cpp
 
