--- a/src/Makefile_insert
+++ b/src/Makefile_insert
@@ -38,6 +38,7 @@ libinkpre_a_SOURCES =	\
 	approx-equal.h remove-last.h	\
 	arc-context.cpp arc-context.h	\
 	attributes.cpp attributes.h	\
+	bad-uri-exception.h	\
 	brokenimage.xpm	\
 	color.cpp color.h	\
 	color-rgba.h	\
