gutted and rewrote GC APIs, also header refactorings and wider use of garbage collection in SPRepr
(bzr r3870)

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -83,12 +83,7 @@ EXTRA_DIST =	\
 	traits/function.h \
 	traits/list.h \
 	traits/reference.h \
-	traits/tree-iterator.h \
-	util/list.h \
-	util/map.h \
-	util/parent-axis.h \
-	util/sibling-axis.h \
-	util/tuple.h
+	traits/tree-iterator.h
 
 EXTRA_PROGRAMS =	\
 	inkview 	\
