--- a/src/Makefile_insert
+++ b/src/Makefile_insert
@@ -60,7 +60,9 @@ libinkpre_a_SOURCES =	\
 	file.cpp file.h	\
 	forward.h	\
 	gc-core.h \
-	gc-object.h \
+	gc-managed.h \
+	gc-finalized.h \
+	gc-anchored.h \
 	geom.cpp geom.h	\
 	help.cpp help.h	\
 	inkscape.cpp inkscape.h inkscape-private.h	\
