--- a/src/util/Makefile_insert
+++ b/src/util/Makefile_insert
@@ -5,5 +5,12 @@ traits/clean:
 	rm -f util/libinkutil.a $(util_libinkutil_a_OBJECTS)
 
 util_libinkutil_a_SOURCES = \
-	util/share-c-string.cpp
+	util/list.h \
+	util/map.h \
+	util/reverse.h \
+	util/parent-axis.h \
+	util/shared-c-string.h \
+	util/shared-c-string.cpp \
+	util/sibling-axis.h \
+	util/tuple.h
 
