--- a/src/Makefile_insert
+++ b/src/Makefile_insert
@@ -59,10 +59,11 @@ libinkpre_a_SOURCES =	\
 	extract-uri.cpp extract-uri.h	\
 	file.cpp file.h	\
 	forward.h	\
-	gc-core.h \
-	gc-managed.h \
-	gc-finalized.h \
+	gc-alloc.h \
 	gc-anchored.h \
+	gc-core.h \
+	gc-finalized.h \
+	gc-managed.h \
 	geom.cpp geom.h	\
 	help.cpp help.h	\
 	inkscape.cpp inkscape.h inkscape-private.h	\
