--- a/src/extension/internal/Makefile_insert
+++ b/src/extension/internal/Makefile_insert
@@ -27,5 +27,6 @@ extension_internal_libinternal_a_SOURCES =	\
 	extension/internal/eps-out.cpp	\
 	extension/internal/gdkpixbuf-input.h	\
 	extension/internal/gdkpixbuf-input.cpp	\
+	extension/internal/pov-out.cpp	\
 	$(extension_internal_gnome_print_sources)
 
