--- a/src/Makefile.mingw
+++ b/src/Makefile.mingw
@@ -36,7 +36,7 @@ RES=inkres.o
 
 inkscape.exe: libinkscape.a main.o winmain.o $(RES) 
 	$(CXX) -o inkscape.exe main.o winmain.o $(RES) libinkscape.a $(LIBS)
-	strip inkscape.exe
+#	strip inkscape.exe
 
 # DLL version.  we need to make this work
 #inkscape.exe: inkscape.dll main.o winmain.o $(RES) 
