--- a/src/livarot/Makefile_insert
+++ b/src/livarot/Makefile_insert
@@ -6,6 +6,7 @@ livarot/clean:
 	rm -f livarot/libvarot.a $(livarot_libvarot_a_OBJECTS)
 
 livarot_libvarot_a_SOURCES =	\
+	livarot/evil-malloc.h \
 	livarot/AVL.cpp	\
 	livarot/AVL.h	\
 	livarot/AlphaLigne.cpp	\
