--- a/src/Makefile_insert
+++ b/src/Makefile_insert
@@ -184,6 +184,7 @@ libinkpost_a_SOURCES =	\
 inkscape_private_libs =	\
 	libinkpre.a	\
 	dialogs/libspdialogs.a	\
+	potrace/libpotrace.a  \
 	xml/libspxml.a	\
 	svg/libspsvg.a	\
 	widgets/libspwidgets.a	\
