--- a/Makefile.mingw.common
+++ b/Makefile.mingw.common
@@ -135,9 +135,11 @@ GTKINC = \
 -I$(GTK)/include/atk-1.0 -I$(GTK)/include/pango-1.0 \
 -I$(GTK)/include/glib-2.0 -I$(GTK)/lib/glib-2.0/include
 
+
+# New way with static C++ libs
 GTKLIB = -L$(GTK)/lib \
--lgtkmm-2.4.dll -lgdkmm-2.4.dll -lglibmm-2.4.dll\
--latkmm-1.6.dll -lpangomm-1.4.dll -lsigc-2.0.dll\
+-lgtkmm-2.4 -lgdkmm-2.4 -lglibmm-2.4 \
+-latkmm-1.6 -lpangomm-1.4 -lsigc-2.0 \
 -lgtk-win32-2.0 -lgdk-win32-2.0 -latk-1.0 \
 -lgdk_pixbuf-2.0 -lm -lpangoft2-1.0 -lpangowin32-1.0 -lpango-1.0 \
 -lgobject-2.0 -lgmodule-2.0 -lgthread-2.0 -lglib-2.0
