--- a/src/dialogs/Makefile_insert
+++ b/src/dialogs/Makefile_insert
@@ -46,6 +46,8 @@ dialogs_libspdialogs_a_SOURCES = \
 	dialogs/stroke-style.h	\
 	dialogs/text-edit.cpp	\
 	dialogs/text-edit.h	\
+	dialogs/tracedialog.cpp	\
+	dialogs/tracedialog.h	\
 	dialogs/transformation.cpp	\
 	dialogs/transformation.h	\
 	dialogs/xml-tree.cpp	\
