--- a/src/xml/Makefile_insert
+++ b/src/xml/Makefile_insert
@@ -17,6 +17,8 @@ xml_libspxml_a_SOURCES =	\
 	xml/sp-repr-action.cpp	\
 	xml/sp-repr-action.h	\
 	xml/sp-repr-action-fns.h	\
+	xml/quote.cpp	\
+	xml/quote.h	\
 	xml/repr-css.cpp	\
 	xml/repr-get-children.cpp	\
 	xml/repr-get-children.h	\
@@ -31,5 +33,7 @@ xml_libspxml_a_SOURCES =	\
 	xml/sp-repr-attr.h 
 
 xml_repr_action_test_SOURCES = xml/repr-action-test.cpp
-
 xml_repr_action_test_LDADD = xml/libspxml.a util/libinkutil.a libinkpost.a $(INKSCAPE_LIBS)
+
+xml_quote_test_SOURCES = xml/quote-test.cpp
+xml_quote_test_LDADD = $(INKSCAPE_LIBS)
