Mega commit.  This commit does two things, it adds in the ability to do plugins in Inkscape.  This means that there are loadable modules that can be used for just about anything.  It also provides a sample implementation of a plugin to load GIMP gradients.  This means that GIMP gradients can be imported into Inkscape, giving a larger set of gradients that can be used in Inkscape.
Currently, nothing here is really complete, but it is functional.  The
plugins really only work for input plugins, and the GIMP gradient example
isn't very robust.  They will come shortly.

(bzr r3971)

--- a/configure.in
+++ b/configure.in
@@ -461,6 +461,7 @@ if test "x${datadir}" = 'x${prefix}/share'; then
 else
   runtime_datadir="${datadir}"
 fi
+
 inkscape_sharedir="${runtime_datadir}/${PACKAGE_NAME}"
 
 dnl Define our data paths for config.h
@@ -470,6 +471,9 @@ AC_DEFINE_UNQUOTED([INKSCAPE_DATADIR], "${runtime_datadir}",
 AC_SUBST(PACKAGE_LOCALE_DIR)
 AC_DEFINE_UNQUOTED([PACKAGE_LOCALE_DIR], "${runtime_datadir}/locale",
 					[Localization directory])
+AC_SUBST(INKSCAPE_LIBDIR)
+AC_DEFINE_UNQUOTED([INKSCAPE_LIBDIR], "${prefix}/lib",
+					[Base library directory -- only path-prefix.h should use it!])
 
 dnl Have to add module makefiles (lauris)
 
@@ -482,6 +486,7 @@ src/display/makefile
 src/extension/makefile
 src/extension/implementation/makefile
 src/extension/internal/makefile
+src/extension/plugin/makefile
 src/helper/makefile
 src/inkjar/makefile
 src/libnr/makefile
