--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -20,6 +20,7 @@ include display/Makefile_insert
 include extension/Makefile_insert
 include extension/implementation/Makefile_insert
 include extension/internal/Makefile_insert
+include extension/plugin/Makefile_insert
 include helper/Makefile_insert
 include inkjar/Makefile_insert
 include libnr/Makefile_insert
